--- a/frontpage.html
+++ b/frontpage.html
@@ -171,96 +171,97 @@
           </ul>
           <h1 class="visually-hidden"></h1>
         </aside>
+        <a href=""></a>
         <div class="wrapper__main_small">
           <section class="menu__main">
-            <div class="menu__main_item allFull">
+            <a class="menu__main_item allFull" href="">
               <h2 class="menu__main_h2">Популярные блюда</h2>
               <img
                 src="./assets/img/bigImg.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item onlyMobileHalf">
+            </a>
+            <a class="menu__main_item onlyMobileHalf" href="">
               <h2 class="menu__main_h2">Блюда на углях</h2>
               <img
                 src="./assets/img/salad.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item onlyMobileHalf">
+            </a>
+            <a class="menu__main_item onlyMobileHalf" href="">
               <h2 class="menu__main_h2">Супы</h2>
               <img
                 src="./assets/img/bigImg.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item onlyDeskHalf">
+            </a>
+            <a class="menu__main_item onlyDeskHalf" href="">
               <h2 class="menu__main_h2">Десерты</h2>
               <img
                 src="./assets/img/kare.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item onlyDeskHalf">
+            </a>
+            <a class="menu__main_item onlyDeskHalf" href="">
               <h2 class="menu__main_h2">Топпинги</h2>
               <img
                 src="./assets/img/bigImg.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item allFull">
+            </a>
+            <a class="menu__main_item allFull" href="">
               <h2 class="menu__main_h2">Популярные блюда</h2>
               <img
                 src="./assets/img/garnish.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item mobileDeskHalf">
+            </a>
+            <a class="menu__main_item mobileDeskHalf" href="">
               <h2 class="menu__main_h2">Напитки</h2>
               <img
                 src="./assets/img/manti.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item onlyTabletHalf">
+            </a>
+            <a class="menu__main_item onlyTabletHalf" href="">
               <h2 class="menu__main_h2">Напитки</h2>
               <img
                 src="./assets/img/salad.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item onlyTabletHalf">
+            </a>
+            <a class="menu__main_item onlyTabletHalf" href="">
               <h2 class="menu__main_h2">Напитки</h2>
               <img
                 src="./assets/img/bigImg.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item onlyTabletHalf">
+            </a>
+            <a class="menu__main_item onlyTabletHalf" href="">
               <h2 class="menu__main_h2">Напитки</h2>
               <img
                 src="./assets/img/kebab.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
-            <div class="menu__main_item allHalf">
+            </a>
+            <a class="menu__main_item allHalf" href="">
               <h2 class="menu__main_h2">Напитки</h2>
               <img
                 src="./assets/img/bigImg.jpg"
                 alt=""
                 class="menu__main_img"
               />
-            </div>
+            </a>
           </section>
           <section class="gallery" loading="lazy">
             <div class="gallery__div">
