--- a/index.html
+++ b/index.html
@@ -2069,12 +2069,14 @@
           </section>
           <section class="aboutUs">
             <div class="aboutUs__div">
-              <div class="workTime">
-                <div class="indicator"></div>
-                <span class="workTime__span_now"> Сейчас работаем </span>
-                <span class="workTime__span"> Пн-Вс: 11:00-24:00 </span>
-              </div>
-              <h2 class="aboutUs__h2">Как нас найти</h2>
+              <div class="aboutUs__wr">
+                <div class="workTime">
+                  <div class="indicator"></div>
+                  <span class="workTime__span_now"> Сейчас работаем </span>
+                  <span class="workTime__span"> Пн-Вс: 11:00-24:00 </span>
+                </div>
+                <h2 class="aboutUs__h2">Как нас найти</h2>
+              </div>              
               <address class="address">
                 г. Мурино, пр. Авиаторов Балтики, д.11/1
               </address>
