feat: render desk/mobile basket

--- a/order.html
+++ b/order.html
@@ -183,25 +183,25 @@
             <div class="order__item order__basket">
               <h2 class="order__item_h2">Ваш заказ</h2>
               <div class="order__list">
-                <div class="mobileBasket__card">
-                  <div class="mobileBasket__card_pict">
+                <div class="basket__card">
+                  <div class="basket__card_pict">
                     <img
-                      class="mobileBasket__card_img"
+                      class="basket__card_img"
                       src="assets/img/kebab.jpg"
                       alt=""
                     />
                   </div>
-                  <h3 class="mobileBasket__h3">
+                  <h3 class="basket__h3">
                     Кебаб из ягненка с салатом из свежих овощей
                   </h3>
-                  <div class="mobileBasket__weightPrice">
-                    <span class="mobileBasket__weight"> 360 г. </span>
-                    <div class="mobileBasket__price">
+                  <div class="basket__weightPrice">
+                    <span class="basket__weight"> 360 г. </span>
+                    <div class="divBasket__price">
                       <span class="basket__price">670</span>
                       <span class="rouble">₽</span>
                     </div>
                   </div>
-                  <div class="mobileBasket__count button__count">
+                  <div class="basket__count button__count">
                     <div class="count_minus">-</div>
                     <div class="count__wrapper">
                       <input
@@ -218,22 +218,22 @@
                 </div>
               </div>
               <div class="card__pinck"></div>
-              <div class="mobileBasket__card last__card">
-                <div class="mobileBasket__card_pict">
+              <div class="basket__card last__card">
+                <div class="basket__card_pict">
                   <img
-                    class="mobileBasket__card_img"
+                    class="basket__card_img"
                     src="assets/img/lastCard.svg"
                     alt=""
                   />
                 </div>
-                <h3 class="mobileBasket__h3">Столовые приборы</h3>
+                <h3 class="basket__h3">Столовые приборы</h3>
                 
-                  <div class="mobileBasket__price">
+                  <div class="divBasket__price">
                     <span class="basket__price">0</span>
                     <span class="rouble">₽</span>
                   </div>
                 
-                <div class="mobileBasket__count button__count">
+                <div class="basket__count button__count">
                   <div class="count_minus">-</div>
                   <div class="count__wrapper">
                     <input
@@ -253,15 +253,15 @@
               <h2 class="order__item_h2">Добавьте к заказу</h2>
               <div class="order__topping_list">
                 <div class="order__topping_card">
-                  <h3 class="mobileBasket__h3">Бородинский хлеб</h3>
-                  <div class="mobileBasket__price">
+                  <h3 class="basket__h3">Бородинский хлеб</h3>
+                  <div class="divBasket__price">
                     <span class="basket__price">60</span>
                     <span class="rouble">₽</span>
                   </div>
                   <span class="order__topping_desc"
                     >2 кусочка ароматного хлеба
                   </span>
-                  <div class="mobileBasket__count button__count">
+                  <div class="basket__count button__count">
                     <div class="count_minus">-</div>
                     <div class="count__wrapper">
                       <input
@@ -277,8 +277,8 @@
                   </div>
                 </div>
                 <div class="order__topping_card">
-                  <h3 class="mobileBasket__h3">Бородинский хлеб</h3>
-                  <div class="mobileBasket__price">
+                  <h3 class="basket__h3">Бородинский хлеб</h3>
+                  <div class="divBasket__price">
                     <span class="basket__price">60</span>
                     <span class="rouble">₽</span>
                   </div>
@@ -286,7 +286,7 @@
                     >Сметанный соус с солеными огурцами и зеленью и Сметанный
                     соус с солеными огурцами и зеленью
                   </span>
-                  <div class="mobileBasket__count button__count">
+                  <div class="basket__count button__count">
                     <div class="count_minus">-</div>
                     <div class="count__wrapper">
                       <input
