--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 alt=""
               />
               <div class="mobileBasket__header_totalPrice">
-                <span class="mobileBasket__header_price">1890 </span>
+                <span class="mobileBasket__header_price"> </span>
                 <span class="rouble">i</span>
               </div>
             </div>
@@ -231,20 +231,20 @@
             <div class="mobileBasket_priceDelivery">
               <span class="mobileBasket__footer_span">Доставка</span>
               <div class="mobileBasket__price_delivery">
-                <span class="priceDelivery">250 </span>
+                <span class="priceDelivery"> </span>
                 <span class="rouble"> i</span>
               </div>
             </div>
             <p class="basket_forFreeDelivery">
               Закажите ещё на
-              <span class="check_forFreeDelivery">105</span>
+              <span class="check_forFreeDelivery"></span>
               <span class="rouble">i</span> для бесплатной доставки!
             </p>
           </div>
           <button class="mobileBasket__button_order">
             <span>Верно, далее</span>
             <div class="mobileBasket_totalCheck">
-              <span class="totalCheck">1895</span>
+              <span class="totalCheck"></span>
               <span class="rouble">i</span>
             </div>
           </button>
@@ -322,19 +322,19 @@
                     </button>
                     <div class="deskBasket_priceDelivery">
                       <span class="deskBasket__footer_span">Доставка</span>
-                      <span class="priceDelivery">250</span>
+                      <span class="priceDelivery"></span>
                       <span class="rouble"> i</span>
                     </div>
                     <p class="basket_forFreeDelivery">
                       Закажите ещё на
-                      <span class="check_forFreeDelivery">105</span>
+                      <span class="check_forFreeDelivery"></span>
                       <span class="rouble">i</span> для бесплатной доставки!
                     </p>
                   </div>
                   <button class="deskBasket__button_order">
                     <span>Верно, далее</span>
                     <div class="deskBasket_totalCheck">
-                      <span class="totalCheck">1895</span>
+                      <span class="totalCheck"></span>
                       <span class="rouble"> i</span>
                     </div>
                   </button>
@@ -346,7 +346,7 @@
             <div class="add__order_desc">
               <span class="add__order_text">Ваш заказ</span>
               <div class="add__order_total">
-                <span class="add__order_price">1800</span>
+                <span class="add__order_price"></span>
                 <span class="add__order_letter rouble">i</span>
               </div>
             </div>
