--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <section class="mobileBasket__menu basket__menu">
                   
                 </section>
-                <button class="mobileBasket__button_clear" type="button">
+                <button class="mobileBasket__button_clear clear" type="button">
                   Убрать все
                 </button>
               </main>
@@ -273,7 +273,7 @@
               <div class="deskBasket__wrapper">
                 <div class="deskBasket__header">
                   <span class="deskBasket__header_span">Ваш заказ</span>
-                  <button class="desk__button_clear">Очистить</button>
+                  <button class="desk__button_clear clear">Очистить</button>
                 </div>
                 <div class="deskBasket__main">
                   <section class="deskBasket__delivery">
@@ -317,14 +317,14 @@
                 </div>
                 <div class="deskBasket__footer">
                   <div class="deskBasket__footer_item">
-                    <button class="deskBasket__button_clear" type="button">
+                    <button class="deskBasket__button_clear clear" type="button">
                       Убрать все
                     </button>
-                    <div class="deskBasket_priceDelivery">
+                    <p class="deskBasket_priceDelivery">
                       <span class="deskBasket__footer_span">Доставка</span>
                       <span class="priceDelivery"></span>
                       <span class="rouble"> i</span>
-                    </div>
+                    </p>
                     <p class="basket_forFreeDelivery">
                       Закажите ещё на
                       <span class="check_forFreeDelivery"></span>
