fix: new structure from json

--- a/frontpage.html
+++ b/frontpage.html
@@ -174,7 +174,7 @@
         <a href=""></a>
         <div class="wrapper__main_small">
           <section class="menu__main">
-            <a class="menu__main_item allFull" href="">
+            <a class="menu__main_item allFull" href="index.html#href1">
               <h2 class="menu__main_h2">Популярные блюда</h2>
               <img
                 src="./assets/img/bigImg.jpg"
@@ -182,7 +182,7 @@
                 class="menu__main_img"
               />
             </a>
-            <a class="menu__main_item onlyMobileHalf" href="">
+            <a class="menu__main_item onlyMobileHalf" href="index.html#href2">
               <h2 class="menu__main_h2">Блюда на углях</h2>
               <img
                 src="./assets/img/salad.jpg"
@@ -190,7 +190,7 @@
                 class="menu__main_img"
               />
             </a>
-            <a class="menu__main_item onlyMobileHalf" href="">
+            <a class="menu__main_item onlyMobileHalf" href="index.html#href3">
               <h2 class="menu__main_h2">Супы</h2>
               <img
                 src="./assets/img/bigImg.jpg"
@@ -263,6 +263,8 @@
               />
             </a>
           </section>
+
+
           <section class="gallery" loading="lazy">
             <div class="gallery__div">
               <h2 class="gallery__h2">ТОП-10</h2>
@@ -753,6 +755,16 @@
         >
       </div>
     </footer>
+    <template>
+      <a class="menu__main_item allHalf" href="">
+        <h2 class="menu__main_h2">Напитки</h2>
+        <img
+          src="./assets/img/bigImg.jpg"
+          alt=""
+          class="menu__main_img"
+        />
+      </a>
+    </template>
     <script src="index.js"></script>
     <script src="assets/swiper/swiper-bundle.min.js"></script>
      <!-- Initialize Swiper -->
