--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
             <p class="basket_forFreeDelivery">
               Закажите ещё на
               <span class="check_forFreeDelivery"></span>
-              <span class="rouble">i</span> для бесплатной доставки!
+              <span class="rouble">i</span>
+              <span class="other__text"> для бесплатной доставки!</span>
             </p>
           </div>
           <button class="mobileBasket__button_order">
@@ -328,7 +329,8 @@
                     <p class="basket_forFreeDelivery">
                       Закажите ещё на
                       <span class="check_forFreeDelivery"></span>
-                      <span class="rouble">i</span> для бесплатной доставки!
+                      <span class="rouble">i</span> 
+                      <span class="other__text"> для бесплатной доставки!</span>
                     </p>
                   </div>
                   <button class="deskBasket__button_order">
@@ -740,7 +742,8 @@
     </template>
 
     <template class="dishesListTemp">
-      <div id="category1" class="menu__cat" data-name="cat1">
+     <!-- <a class="href__cat" name="hrefid"></a>-->
+      <div class="menu__cat" data-name="cat1">       
         <h2 class="menu__h2">Популярные блюда</h2>
         
       </div>
