feat: order recalculation

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <span class="other__text"> для бесплатной доставки!</span>
             </p>
           </div>
-          <button class="mobileBasket__button_order">
+          <button class="mobileBasket__button_order button_order">
             <span>Верно, далее</span>
             <div class="mobileBasket_totalCheck">
               <span class="totalCheck"></span>
@@ -333,7 +333,7 @@
                       <span class="other__text"> для бесплатной доставки!</span>
                     </p>
                   </div>
-                  <button class="deskBasket__button_order">
+                  <button class="deskBasket__button_order button_order">
                     <span>Верно, далее</span>
                     <div class="deskBasket_totalCheck">
                       <span class="totalCheck"></span>
