--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       }
     </style>
     <script>
-      var urLForGet = "new.json";
-      var page = true;
+      var page = 1;
     </script>
     <script src="dishes.js"></script>
     <title>GRILL VINO & ХАЧАПУРИ</title>
@@ -331,10 +330,7 @@
                       <span class="other__text"> для бесплатной доставки!</span>
                     </p>
                   </div>
-                  <a
-                    class="deskBasket__button_order button_order"
-                   
-                  >
+                  <a class="deskBasket__button_order button_order">
                     <span>Верно, далее</span>
                     <div class="deskBasket_totalCheck">
                       <span class="totalCheck"></span>
@@ -702,9 +698,8 @@
     </template>
 
     <template class="dishesListTemp">
-      <!-- <a class="href__cat" name="hrefid"></a>-->
       <div class="menu__cat" data-name="cat1">
-        <h2 class="menu__h2">Популярные блюда</h2>
+        <h2  class="menu__h2">Популярные блюда</h2>
       </div>
     </template>
     <template class="menuCardTemp">
