--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <span class="other__text"> для бесплатной доставки!</span>
             </p>
           </div>
-          <a class="mobileBasket__button_order button_order">
+          <a class="mobileBasket__button_order button_order" href="order.html">
             <span>Верно, далее</span>
             <div class="mobileBasket_totalCheck">
               <span class="totalCheck"></span>
@@ -330,7 +330,7 @@
                       <span class="other__text"> для бесплатной доставки!</span>
                     </p>
                   </div>
-                  <a class="deskBasket__button_order button_order">
+                  <a class="deskBasket__button_order button_order" href="order.html">
                     <span>Верно, далее</span>
                     <div class="deskBasket_totalCheck">
                       <span class="totalCheck"></span>
